k8s-demo-yamls/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-platform
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iot-platform
  template:
    metadata:
      labels:
        app: iot-platform
    spec:
      containers:
        - name: iot-platform
          image: iot-platform:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /app/config/application.yml
              subPath: application.yml
      volumes:
        - name: app-config
          configMap:
            name: iot-app-config
