k8s-demo-yamls/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-platform
  namespace: demo
spec:
  selector:
    app: iot-platform
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
