k8s-demo-yamls/emqx.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx
  namespace: demo
spec:
  type: NodePort
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: dashboard
      port: 18083
      targetPort: 18083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
        - name: emqx
          image: emqx/emqx:5.5.0
          ports:
            - containerPort: 1883
            - containerPort: 18083
