k8s-demo-yamls/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: demo
spec:
  ports:
    - port: 8086
  selector:
    app: influxdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: demo
spec:
  serviceName: influxdb
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: influxdb-data
              mountPath: /var/lib/influxdb2
  volumeClaimTemplates:
    - metadata:
        name: influxdb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
